--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.8",
     "styled-components": "^5.1.1"
   },
   "scripts": {
