--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "react-ecommerce-platform",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
